[gd_scene load_steps=13 format=3 uid="uid://bxjdf1p7ppmjr"]

[ext_resource type="Theme" uid="uid://cp2dw8jh1pmps" path="res://ui/theme.tres" id="1_0sglw"]
[ext_resource type="Script" uid="uid://bloa2lj5wypf" path="res://scenes/options.gd" id="2_dy6pv"]
[ext_resource type="Script" uid="uid://bjf4uvk2ono4a" path="res://scenes/ui/main_menu.gd" id="2_wb0q5"]
[ext_resource type="PackedScene" uid="uid://dliy4c84b7iag" path="res://scenes/ui/options/audio_option.tscn" id="3_is7wu"]
[ext_resource type="StyleBox" uid="uid://de2cuaf47srp5" path="res://ui/styles/stylebox_button_focus_danger.tres" id="4_q85j6"]
[ext_resource type="PackedScene" uid="uid://rasjftexmjht" path="res://scenes/ui/options/fullscreen_option.tscn" id="4_qnfpr"]
[ext_resource type="Script" uid="uid://50onjg31221w" path="res://scenes/ui/quit_button.gd" id="5_8g5eo"]
[ext_resource type="PackedScene" uid="uid://cgnmle83oa3at" path="res://scenes/ui/options/check_box_option.tscn" id="5_52wkn"]
[ext_resource type="Script" uid="uid://rex0i8nt0iit" path="res://scenes/ui/options/screen_shake_option.gd" id="6_3i5l6"]
[ext_resource type="Script" uid="uid://cvfji11bhhncx" path="res://scenes/ui/version_label.gd" id="7_x8sms"]
[ext_resource type="Script" uid="uid://b6qdw17kc1ly0" path="res://scenes/ui/linked_label.gd" id="11_h4dpu"]

[sub_resource type="ButtonGroup" id="ButtonGroup_h4dpu"]
allow_unpress = true

[node name="MainMenu" type="MarginContainer" node_paths=PackedStringArray("default_focus", "help_menu", "options_menu", "credits_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0sglw")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("2_wb0q5")
default_focus = NodePath("VBoxContainer2/PlayButton")
help_menu = NodePath("HelpMenu")
options_menu = NodePath("OptionsMenu")
credits_menu = NodePath("CreditsMenu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 64
text = "TERMINATED"
horizontal_alignment = 1
uppercase = true

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "vX.X.X"
script = ExtResource("7_x8sms")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="PlayButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "> RUN"
alignment = 0

[node name="HelpButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_h4dpu")
text = "> HELP"
alignment = 0

[node name="OptionsButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_h4dpu")
text = "> CONFIG"
alignment = 0

[node name="CreditsButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_h4dpu")
text = "> CREDITS"
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme_override_styles/focus = ExtResource("4_q85j6")
text = "> TERMINATE"
alignment = 0
script = ExtResource("5_8g5eo")

[node name="HelpMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="HelpMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HelpMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InstructionsLabel" type="Label" parent="HelpMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "    [WASD] Move
Hold [LMB] Machine Gun
 Tap [LMB] Shotgun
     [RMB] Laser"
uppercase = true

[node name="HSeparator" type="HSeparator" parent="HelpMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel2" type="Label" parent="HelpMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "       [R] Reboot
     [ESC] Self-Destruct"
uppercase = true

[node name="OptionsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="OptionsMenu"]
layout_mode = 2

[node name="Options" type="GridContainer" parent="OptionsMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2
script = ExtResource("2_dy6pv")

[node name="SoundOption" parent="OptionsMenu/MarginContainer/Options" instance=ExtResource("3_is7wu")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
bus_name = "Sound"
default = true
key = "sound"

[node name="SoundLabel" type="Label" parent="OptionsMenu/MarginContainer/Options"]
layout_mode = 2
text = "Sound"
uppercase = true

[node name="MusicOption" parent="OptionsMenu/MarginContainer/Options" instance=ExtResource("3_is7wu")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
bus_name = "Music"
default = true
key = "music"

[node name="MusicLabel" type="Label" parent="OptionsMenu/MarginContainer/Options"]
layout_mode = 2
text = "Music"
uppercase = true

[node name="FullscreenOption" parent="OptionsMenu/MarginContainer/Options" instance=ExtResource("4_qnfpr")]
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
key = "fullscreen"

[node name="FullscreenLabel" type="Label" parent="OptionsMenu/MarginContainer/Options"]
layout_mode = 2
text = "Fullscreen"
uppercase = true

[node name="ScreenShakeOption" parent="OptionsMenu/MarginContainer/Options" instance=ExtResource("5_52wkn")]
layout_mode = 2
script = ExtResource("6_3i5l6")
default = true
key = "screen_shake"

[node name="ScreenShakeLabel" type="Label" parent="OptionsMenu/MarginContainer/Options"]
layout_mode = 2
text = "Screen Shake"
uppercase = true

[node name="CreditsMenu" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CreditsMenu"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsMenu/MarginContainer"]
custom_minimum_size = Vector2(580, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="RichTextLabel" type="RichTextLabel" parent="CreditsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "CREATED BY [url=https://frie.dev]AARON FRIESEN[/url]
MADE IN [url=https://godotengine.org]GODOT ENGINE[/url]"
fit_content = true
script = ExtResource("11_h4dpu")

[node name="HSeparator" type="HSeparator" parent="CreditsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel2" type="RichTextLabel" parent="CreditsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "THIRD-PARTY ASSETS:

* [url=https://github.com/kika/fixedsys]FixedSys Excelsior[/url] by [url=https://github.com/bathos]Darien Valentine[/url] ([url=http://creativecommons.org/publicdomain/zero/1.0/]CC0[/url])
* [url=https://opengameart.org/content/wgs-sound-fx-explosion-1]WGS Sound FX - Explosion 1[/url] by [url=http://wrathgames.com/blog]WrathGames Studio[/url] ([url=http://creativecommons.org/licenses/by/3.0/]CC-BY 3.0[/url])
* [url=https://opengameart.org/content/2-high-quality-explosions]2 High Quality Explosions[/url] by [url=http://apollo-music.de/]Michel Baradari[/url] ([url=http://creativecommons.org/licenses/by/3.0/]CC-BY 3.0[/url])
* [url=https://opengameart.org/content/75-cc0-breaking-falling-hit-sfx]75 CC0 breaking / falling / hit sfx[/url] by [url=https://opengameart.org/users/rubberduck]rubberduck[/url] ([url=http://creativecommons.org/publicdomain/zero/1.0/]CC0[/url])
* [url=https://opengameart.org/content/13-ambient-machine-sounds]13 Ambient Machine Sounds[/url] by [url=http://www.berklee.edu/facilities/recording_studios.html]Michael Brigida and students[/url] ([url=http://creativecommons.org/licenses/by/3.0/]CC-BY 3.0[/url])
* [url=https://opengameart.org/content/12-ambient-machine-sounds]12 Ambient Machine Sounds[/url] by [url=http://www.berklee.edu/facilities/recording_studios.html]Michael Brigida and students[/url] ([url=http://creativecommons.org/licenses/by/3.0/]CC-BY 3.0[/url])
* [url=https://opengameart.org/content/spider-chattering]Spider Chattering[/url] by [url=https://opengameart.org/users/spookymodem]spookymodem[/url] ([url=http://creativecommons.org/licenses/by/3.0/]CC-y 3.0[/url])
* [url=https://opengameart.org/content/63-digital-sound-effects-lasers-phasers-space-etc]63 Digital sound effects (lasers, phasers, space etc.)[/url] by [url=https://kenney.nl]Kenney[/url] ([url=http://creativecommons.org/publicdomain/zero/1.0/]CC0[/url])
* [url=https://opengameart.org/content/laser-rifle]Laser rifle[/url] by [url=https://opengameart.org/users/skorpio]Skorpio[/url] ([url=http://creativecommons.org/licenses/by-sa/3.0/]CC-BY-SA 3.0[/url])
* [url=https://opengameart.org/content/q009s-weapon-sounds]Q009's weapon sounds[/url] by Q009 ([url=http://creativecommons.org/licenses/by-sa/3.0/]CC-BY-SA 3.0[/url])"
fit_content = true
script = ExtResource("11_h4dpu")

[connection signal="pressed" from="VBoxContainer2/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="toggled" from="VBoxContainer2/HelpButton" to="." method="_on_help_button_toggled"]
[connection signal="toggled" from="VBoxContainer2/OptionsButton" to="." method="_on_options_button_toggled"]
[connection signal="toggled" from="VBoxContainer2/CreditsButton" to="." method="_on_credits_button_toggled"]
[connection signal="pressed" from="VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="changed" from="OptionsMenu/MarginContainer/Options/SoundOption" to="OptionsMenu/MarginContainer/Options" method="_on_option_changed"]
[connection signal="changed" from="OptionsMenu/MarginContainer/Options/MusicOption" to="OptionsMenu/MarginContainer/Options" method="_on_option_changed"]
[connection signal="changed" from="OptionsMenu/MarginContainer/Options/FullscreenOption" to="OptionsMenu/MarginContainer/Options" method="_on_option_changed"]
[connection signal="changed" from="OptionsMenu/MarginContainer/Options/ScreenShakeOption" to="OptionsMenu/MarginContainer/Options" method="_on_option_changed"]
